# numpy-opencv-converter

./: CMakeLists.txt  README.md  np_opencv_converter.cpp  np_opencv_converter.hpp
include/numpy_opencv_converter/: conversion.h  numpy_opencv_converter.h  template.h
src/: conversion.cpp  numpy_opencv_converter.cpp
utils/: container.h
